tests/miniJava/neg/000221_mutation.MiniJava
class java { public static void class Main ( String [ ] java ) { { } } }
